--- a/style.css
+++ b/style.css
@@ -1,15 +1,73 @@
-.main{
-    /* background-color:rgb(0,0,0); */
+*{
+    margin:0;
+    padding:0;
 }
 
+html {
+    background-color: #fce4ec;
+    padding: 0 70px;
+}
+
+.header{
+    padding:15px 40px;
+    display:flex;
+    justify-content: space-between;
+}
+
+ul{
+    list-style-type:none;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+li{
+    margin-right: 40px;
+}
+
+h2{
+    font-weight: 700px;
+    font-size:36px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:rgb(176, 106, 195);
+    text-shadow: 0 0 15px rgb(176, 106, 195);
+}
+p{
+    width: 100%;
+    text-align: center;
+    color:rgb(208, 153, 223);
+    font-weight: bold;
+    font-size:20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.color{
+    width: 100%;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    align-items: center;
+}
+.side-bar{
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 0 auto;
+    width: 30%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    margin-top:50px;
+}
 .color-picker{
     width: 80px;
     height: 80px;
     border-radius: 50%;
     background-color: transparent;
     margin: 0 auto 20px;
+    margin-top: 10px;
     box-shadow: 0 4px 15px rgba(233, 30, 99, 0.4);
-    border: 1px solid white;
+    border: 4px solid white;
 }
 
 .color-picker::-webkit-color-swatch-wrapper {
