--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ html {
     padding:15px 40px;
     display:flex;
     justify-content: space-between;
+    border-bottom: solid;
+    border-color: rgb(255, 131, 172);;
 }
 
 ul{
@@ -19,11 +21,22 @@ ul{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    
+    cursor: pointer;
+    align-items: center;
 }
 
 li{
     margin-right: 40px;
+    font-weight: bold;
+    font-size:20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: rgb(255, 131, 172);
+}
+
+ul li a {
+  text-decoration: none;
+  color: inherit; 
 }
 
 h2{
@@ -48,16 +61,40 @@ p{
     justify-content: center;
     align-items: center;
 }
+
+.main{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height: 80vh;
+    gap:100px;
+}
+
 .side-bar{
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-    margin: 0 auto;
-    width: 30%;
+    margin: 0;
+    width: 20%;
     display:flex;
     flex-wrap: wrap;
     justify-content:center;
     margin-top:50px;
+    height:80%;
+    box-shadow: 0 0px 20px rgba(233, 30, 99, 0.4);
+}
+
+.grid{
+    background-color: white;
+    width: 500px;
+    height: 500px;
+    border-radius: 10px;
+    padding: 20px;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    margin-top:50px;
+    box-shadow: 0 0px 20px rgba(233, 30, 99, 0.4);
 }
 .color-picker{
     width: 80px;
@@ -68,6 +105,7 @@ p{
     margin-top: 10px;
     box-shadow: 0 4px 15px rgba(233, 30, 99, 0.4);
     border: 4px solid white;
+    cursor: pointer;
 }
 
 .color-picker::-webkit-color-swatch-wrapper {
