--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
     display:flex;
     justify-content: space-between;
     border-bottom: solid;
-    border-color: rgb(255, 131, 172);;
+    border-color: rgb(255, 131, 172);
 }
 
 ul{
@@ -54,12 +54,13 @@ p{
     font-size:20px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.color{
+.color,
+.grid-size{
     width: 100%;
     display:flex;
     flex-wrap:wrap;
     justify-content: center;
-    align-items: center;
+    align-items:center;
 }
 
 .main{
@@ -68,6 +69,10 @@ p{
     align-items:center;
     height: 80vh;
     gap:100px;
+}
+
+input{
+    align-self:flex-start;
 }
 
 .side-bar{
@@ -82,6 +87,7 @@ p{
     margin-top:50px;
     height:80%;
     box-shadow: 0 0px 20px rgba(233, 30, 99, 0.4);
+    
 }
 
 .grid{
@@ -101,7 +107,7 @@ p{
     height: 80px;
     border-radius: 50%;
     background-color: transparent;
-    margin: 0 auto 20px;
+    margin: 0 auto;
     margin-top: 10px;
     box-shadow: 0 4px 15px rgba(233, 30, 99, 0.4);
     border: 4px solid white;
@@ -116,4 +122,38 @@ p{
   border-radius: 50%;
   background-color: white;
   box-shadow: (0 0 10 rgb(255, 27, 164));
+}
+
+.buttons{
+    display:flex;
+    width:80%;
+    flex-wrap:wrap;
+    flex-basis:80%;
+    flex-direction: column;
+    gap:20px;
+    margin-top: 20px;
+}
+button{
+    padding:7px 0;
+    border-radius:15px;
+    outline:none;
+    border:solid 2px;
+    background-color: white;
+    border-color: rgb(255, 131, 172);
+    text-align: center;
+    color:rgb(255, 131, 172);
+    font-weight: bold;
+    font-size:14px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor:pointer;
+}
+
+#range{
+    accent-color: rgb(255, 131, 172);
+    outline:none;
+}
+
+#range::-webkit-slider-thumb{
+    cursor:ew-resize;
+    
 }
