--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ input{
   border: none;
   border-radius: 50%;
   background-color: white;
-  box-shadow: (0 0 10 rgb(255, 27, 164));
+  box-shadow: (0 0 10px rgb(255, 27, 164));
 }
 
 .buttons{
@@ -156,4 +156,19 @@ button{
 #range::-webkit-slider-thumb{
     cursor:ew-resize;
     
+}
+
+button{
+    transition: all 0.4s;
+    box-shadow: 0px 4px 4px rgba(233, 30, 99, 0.3);
+}
+
+button:hover{
+    background-color: #FFEBF4;
+    
+}
+
+button:active{
+    background-color: rgb(255, 131, 172);
+    color:white;
 }
